--- a/index.html
+++ b/index.html
@@ -9,29 +9,20 @@
 
 <body>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <div id="app">
-    <ul>
-      <li v-for="item in items" v-bind:key="item.name">
-        {{ item.name }} の個数 : <input type="number" v-on:imput="item.quantity" min="0">
-      </li>
-    </ul>
-    <hr>
-    <div v-bind:style="errorMessageStyle">
-      <ul>
-        <li v-for="item in items" v-bind:key="item.name">
-          {{ item.name }}: {{ item.price }} x {{ item.quantity }} =
-          {{ item.price * item.quantity | numberWithDelimiter }}円
-        </li>
-      </ul>
-
-      <p>{{ items[0].name }}: {{ items[0].price }} x {{ items[0].quantity }}</p>
-      <p>小計: {{ totalPrice | numberWithDelimiter}}円</p>
-      <p>合計（税込）: {{ totalPriceWithMax | numberWithDelimiter }}円</p>
-      <p v-show="!canBuy">
-        {{ 1000 | numberWithDelimiter }}円以上からご購入いただけます
-      </p>
-    </div>
+  <div id="login-example">
+    <user-login></user-login>
   </div>
+  <script type="text/x-template" id="login-template">
+    <div id="login-template">
+      <div>
+        <input type="text" placeholder="ログインID" v-model="userid">
+      </div>
+      <div>
+        <input type="passward" placeholder="パスワード" v-model="passward">
+      </div>
+      <button @click="login()">ログイン</button>
+    </div>  
+  </script>
   <script src="js/main.js"></script>
 </body>
 
