--- a/index.html
+++ b/index.html
@@ -10,73 +10,12 @@
 <body>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <div id="app">
-    <nav v-cloak>
-      <router-link to="/top">トップページ</router-link>
-      <router-link to="/users">ユーザ一覧</router-link>
-      <router-link to="users/new?redirect=true">新規ユーザ登録</router-link>
-      <router-link to="/login" v-show="!Auth.loggedIn()">ログイン</router-link>
-      <router-link to="/logout" v-show="Auth.loggedIn()">ログアウト</router-link>
-    </nav>
-    <router-view></router-view>
+    <button @click="isShown = !isShown">表示の切り替え</button>
+    <transition>
+      <p v-show="isShown">Hello,World!</p>
+    </transition>
   </div>
-
-  <script type="text/x-template" id="user-list">
-    <div>
-      <div class="loading" v-if="loading">読み込み中...</div>
-      <div v-if="error" class="error">
-        {{ error }}
-      </div>
-      <div v-for="user in users" :key="user.id">
-        <router-link to="{ path: '/users/' + user.id }">{{ user.name }}</router-link>
-      </div>
-    </div>
-  </script>
-
-  <script type="text/x-template" id="user-detail">
-    <div>
-      <div class="loading" v-if="loading">読み込み中...</div>
-      <div v-if="error" class="error">{{ error }}</div>
-    </div>
-    <div v-if="user">
-      <h2>{{ user.name }}</h2>
-      <p>{{ user.description }}</p>
-    </div>
-  </script>
-
-  <script type="text/x-template" id="user-create">
-    <div>
-      <div class="sending" v-if="sending">Sending...</div>
-      <div>
-        <h2>新規ユーザ作成</h2>
-        <div>
-          <label>名前: </label>
-          <input type="text" v-model="user.name">
-         </div>
-        <div>
-          <label>説明文: </label>
-          <textarea v-model="user.description"></textarea>
-        </div>
-        <div v-if="error" class="error">{{ error }}</div>  
-        <div>
-          <input type="button" @click="createUser" value="送信">
-        </div>
-      </div>
-    </div>
-  </script>
-
-  <script type="text/x-template" id="login">
-    <div>
-      <h2>Login</h2>
-      <p v-if="$route.query.redirect">ログインしてください</p>
-      <form @submit.prevent="login">
-        <label><input v-model="email" placeholder="email"></label>
-        <label><input v-model="pass" placeholder="passward" type="passward"></label><br>
-        <button type="submit">ログイン</button>
-        <p v-if="error" class="error">ログインに失敗しました</p>
-      </form>
-    </div>
-  </script>
-  <script src="js/main.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
